--- a/css/scratchstyles.css
+++ b/css/scratchstyles.css
@@ -5,8 +5,14 @@ body{
 }
 
 .header{
-   font-size: x-large;
+    height: 100px;
+    background-color:darksalmon;
+    color: white;
+    line-height: 100px;
+   
 }
+
+
 
 .define{
     font-style: italic;
@@ -22,10 +28,34 @@ body{
     list-style-position: inside;
     color: darksalmon;
     
+}
+
+nav{
+    background-color: lightgray;
+    padding: 10px
     
 }
 
-.navigation{
-    text-align:left;
+nav a{
+    font-weight: bold;
+    font-size: 16px;
+    text-decoration: none;
+    color: black;
+    padding:10px 13px
 }
 
+nav a:hover{
+    background-color:#ccc;
+}
+
+.footer{
+    height: 25px;
+    font-size: 10px;
+    padding-top: 15px;
+    background-color: darksalmon;
+    color: white;
+    bottom: 0px;
+    right: 5px;
+    left: 5px;
+    position: fixed;
+}
